# toffy

./: .gitignore  CMakeLists.txt  README.md  Welcome.txt
apps/: CMakeLists.txt  main.cpp  tst_pb.cpp
apps/configs/: 2d.xml  config.xml  config2.xml  g0_config.xml  g1_config.xml  g2_config.xml  g3_config.xml  g4_config.xml  g5_config.xml  merge_config22.xml  thread_config.xml
docs/: CMakeLists.txt  Doxyfile.cfg
docs/configDocs/xmls/: bta.xml  sensoru.xml
docs/configDocs/xmls/core/: event.xml
docs/configDocs/xmls/detection/: blobs.xml
docs/configDocs/xmls/examples/: config.xml
docs/configDocs/xmls/filters/: amplituderange.xml  backgroundsubs.xml  polar2cart.xml  rectify.xml  reprojectopencv.xml  reprojectpcl.xml  roi.xml
docs/configDocs/xmls/tracking/: tracker.xml
docs/configDocs/xmls/viewers/: cloudviewpcl.xml  colorize.xml  imageview.xml
docs/descDocs/: amplitudeRange.dox  backgroundSubs.dox  blobs.dox  bta.dox  bta.xml  roi.dox  tracker.dox
docs/extraDocs/filters/: roi_extra.dox
docs/mainpages/public/: PublicMainPage.dox  configuraton.dox  how_to_get.dox  introduction.dox  page_order.dox  use.dox
docs/mainpages/public/modules/: modules.dox
libraries/: CMakeLists.txt
libraries/include/toffy/actions/: #action.hpp#  .#action.hpp  action.hpp
libraries/include/toffy/common/: filenodehelper.hpp  plugins.hpp  pointTransfom.hpp
libraries/include/toffy/graphs/: BoundingBox.hpp  boundingBox.hpp  contour_utils.hpp  graph.hpp  graph_utils.hpp  raster.hpp
libraries/include/toffy/skeletonizers/: depthSkeletonizer.hpp  erodeSkeletonizer.hpp  k3mSkeletonizer.hpp  k3mUpDownSkeletonizer.hpp  k3mppSkeletonizer.hpp  skeletonizer.hpp  skeletonizerFactory.hpp  thickSkeletonizer.hpp
libraries/include/toffy/tracers/: pruner.hpp  segmentTracer.hpp  segments.hpp  thickTracer8.hpp
libraries/include/toffy/web/actions/: action.hpp
libraries/include/toffy/web/common/: plugins.hpp
libraries/sensor/include/toffy/: imagesensor.hpp
libraries/src/: CMakeLists.txt
libraries/src/common/: CMakeLists.txt  filenodehelper.cpp
libraries/src/graphs/: CMakeLists.txt  boundingBox.cpp  graph.cpp  raster.cpp
libraries/src/skeletonizers/: CMakeLists.txt  depthSkeletonizer.cpp  erodeSkeletonizer.cpp  k3mSkeletonizer.cpp  k3mUpDownSkeletonizer.cpp  k3mppSkeletonizer.cpp  skeletonizer.cpp  skeletonizerFactory.cpp  thickSkeletonizer.cpp
libraries/src/tracers/: CMakeLists.txt  pruner.cpp  segmentTracer.cpp  segments.cpp  thickTracer8.cpp
modules/: CMakeLists.txt
modules/bta/include/toffy/bta/: BtaWrapper.hpp  FrameHeader.hpp  bta.hpp  initPlugin.hpp
modules/bta/include/toffy/cam/: cameraParams.hpp
modules/bta/include/toffy/io/: csv_source.hpp  imagesensor.hpp  sensor.hpp
modules/bta/include/toffy/web/: btaController.hpp  btaGroupController.hpp
modules/bta/src/: BtaWrapper.cpp  CMakeLists.txt  bta.cpp  csv_source.cpp  initPlugin.cpp
modules/control/: CMakeLists.txt
modules/control/html/: .htaccess  actions.html  cloud.html  image.html  index.html
modules/control/html/css/: style.css
modules/control/html/scripts/: utils.js
modules/control/html/ui/filter/: bta.html  index.html  sensor2d.html  transform.html
modules/control/html/ui/group/: bta.html  capturers.html  sensor2d.html
modules/control/include/toffy/web/: capturersController.hpp  controllerFactory.hpp  filterController.hpp  requestAction.hpp  requestController.hpp  sensor2dController.hpp  sensor2dGroupController.hpp  sensorusbController.hpp  webcontroller.hpp
modules/control/server/src/: CMakeLists.txt  connection.cpp  connection_manager.cpp  mime_types.cpp  reply.cpp  request_handler.cpp  request_parser.cpp  server.cpp
modules/control/src/: CMakeLists.txt  capturersController.cpp  controllerFactory.cpp  filterController.cpp  requestAction.cpp  requestController.cpp  sensor2dController.cpp  sensor2dGroupController.cpp  sensorusbController.cpp  webcontroller.cpp
modules/core/: CMakeLists.txt
modules/core/include/toffy/: btaFrame.hpp  controller.hpp  event.hpp  filter.hpp  filterThread.hpp  filter_helpers.hpp  filterbank.hpp  filterfactory.hpp  frame.hpp  mux.hpp  parallelFilter.hpp  player.hpp
modules/core/src/: CMakeLists.txt  controller.cpp  event.cpp  filter.cpp  filterThread.cpp  filterbank.cpp  filterfactory.cpp  frame.cpp  mux.cpp  parallelFilter.cpp  player.cpp
modules/filters/: CMakeLists.txt
modules/filters/include/toffy/3d/: bbox.hpp  boundbox.hpp  groundprojection.hpp  merge.hpp  muxMerge.hpp  sampleConsensus.hpp  split.hpp  transform.hpp  xyz2mat.hpp  xyz2pcl.hpp
modules/filters/include/toffy/base/: amplitudeRange.hpp  backgroundsubs.hpp  cond.hpp  distAmpl.hpp  extractor.hpp  focus.hpp  nop.hpp  offset.hpp  ofsCorr.hpp  polar2cart.hpp  range.hpp  rectify.hpp  roi.hpp
modules/filters/include/toffy/capture/: capturerFilter.hpp
modules/filters/include/toffy/detection/: blobs.hpp  mask.hpp  (+5 more)
modules/filters/src/: CMakeLists.txt
modules/filters/src/3d/: CMakeLists.txt  bbox.cpp  boundbox.cpp  groundprojection.cpp  merge.cpp  muxMerge.cpp  sampleConsensus.cpp  split.cpp  transform.cpp  xyz2mat.cpp  xyz2pcl.cpp
modules/filters/src/base/: CMakeLists.txt  amplitudeRange.cpp  backgroundsubs.cpp  cond.cpp  distAmpl.cpp  extractor.cpp  focus.cpp  nop.cpp  offset.cpp  ofsCorr.cpp  polar2cart.cpp  range.cpp  rectify.cpp  roi.cpp
modules/filters/src/capture/: CMakeLists.txt  capturerFilter.cpp
modules/filters/src/detection/: CMakeLists.txt  blobs.cpp  blobsDetector.cpp  detectedObject.cpp  mask.cpp  objectTrack.cpp  simpleBlobs.cpp  squareDetect.cpp
modules/filters/src/import/: CMakeLists.txt  dataimporter.cpp  importYaml.cpp
modules/filters/src/reproject/: CMakeLists.txt  reprojectopencv.cpp  reprojectpcl.cpp
modules/filters/src/smoothing/: CMakeLists.txt  average.cpp  bilateral.cpp  kalmanaverage.cpp
modules/filters/src/tracking/: CMakeLists.txt  cvTracker.cpp  init.cpp  tracker.cpp
modules/filters/src/viewers/: CMakeLists.txt  cloudviewopencv.cpp  cloudviewpcl.cpp  colorize.cpp  exportYaml.cpp  exportcloud.cpp  exportcsv.cpp  imageview.cpp  init.cpp  videoout.cpp
(+41 files in other folders)
